--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇺🇸 美国-10.46MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.29MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.46MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-255.8KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
   - {name: 🇨🇳 中国-6.59MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.87MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: e37c6d7efa845d60, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-896.0KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: 6f0a9d0fa39d65fa, skip-cert-verify: true}
-  - {name: 🇨🇳 台湾-2.00MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
-  - {name: 🇺🇸 美国-2.64MB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
   - {name: 🇭🇰 香港-1.94MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
   - {name: 🇺🇸 美国-3.06MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
   - {name: 🇨🇳 中国-999.8KB/s(Youtube:不良林), server: zj.haojiahuo.ml, port: 30044, type: vmess, uuid: 0bff49b2-6e66-3572-897b-9d16ce612965, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /videos, ws-headers: {Host: zj.haojiahuo.ml}}
+  - {name: 🇫🇷 法国-922.9KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-384.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-10.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-896.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-999.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇺🇸 美国-10.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-896.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-999.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,20 +53,19 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇺🇸 美国-10.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-896.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-999.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-2.00MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -75,30 +74,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇺🇸 美国-10.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-896.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-999.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇺🇸 美国-10.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-896.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-999.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -106,15 +105,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-10.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-896.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-999.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -131,15 +130,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇺🇸 美国-10.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.29MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-255.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.87MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-896.0KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.64MB/s(Youtube:不良林)
       - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
       - 🇨🇳 中国-999.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
+      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
