--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-10.46MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-8.46MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-255.8KB/s(Youtube:不良林), server: 107.167.24.6, port: 17001, type: trojan, password: d4e9e6bb-daa4-44ed-aa29-d1b8d00ba7d6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.59MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-1.94MB/s(Youtube:不良林), server: 527hk1.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk1.fans8.xyz}}
-  - {name: 🇺🇸 美国-3.06MB/s(Youtube:不良林), server: 212.81.47.11, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-999.8KB/s(Youtube:不良林), server: zj.haojiahuo.ml, port: 30044, type: vmess, uuid: 0bff49b2-6e66-3572-897b-9d16ce612965, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /videos, ws-headers: {Host: zj.haojiahuo.ml}}
-  - {name: 🇫🇷 法国-922.9KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-1.77MB/s(Youtube:不良林), server: www.nubility.ml, port: 443, type: trojan, password: 9a2c5cc6ef, sni: www.nubility.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-384.2KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-7.36MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: c3c448da2363a6f7, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.84MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: 9a27800ca7b52ee0, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.09MB/s(Youtube:不良林), server: 116.129.254.29, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-10.21MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.58MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.45MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-1.56MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇯🇵 日本-3.15MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-2.68MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-10.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-255.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-999.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-10.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-255.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-999.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-10.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-255.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-999.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.56MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-10.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-255.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-999.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-10.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-255.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-999.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-10.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-255.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-999.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-10.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.46MB/s(Youtube:不良林)
-      - 🇺🇸 美国-255.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.59MB/s(Youtube:不良林)
-      - 🇭🇰 香港-1.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-999.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.77MB/s(Youtube:不良林)
-      - 🇨🇳 中国-384.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.84MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.09MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.21MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-1.56MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.15MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.68MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
