--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-8.38MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: c3c448da2363a6f7, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.58MB/s(Youtube:不良林), server: au2-3.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-3.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-12.66MB/s(Youtube:不良林), server: 20.210.229.72, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-5.08MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-921.5KB/s(Youtube:不良林), server: 5.44.249.43, port: 3389, type: trojan, password: ca4596fb9bc63cf2, skip-cert-verify: true}
-  - {name: 🇫🇷 法国-922.9KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-1.64MB/s(Youtube:不良林), server: au2-1.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-1.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.45MB/s(Youtube:不良林), server: au2-4.nigirocloud.com, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, sni: au2-4.nigirocloud.com, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.15MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.69MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: 711aabc21e45ae31, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-8.21MB/s(Youtube:不良林), server: 116.129.253.130, port: 3389, type: trojan, password: f6f2072a2e4cfc91, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-10.72MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: ffec9f6ea19e1dd1, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.30MB/s(Youtube:不良林), server: 116.129.254.47, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-5.61MB/s(Youtube:不良林), server: 212.81.47.13, port: 443, type: trojan, password: 3yFq7NCP53mVfpXJz3, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-470.7KB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇫🇷 法国-1.59MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇩🇪 德国-830.4KB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-921.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-470.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-830.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-8.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-921.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-470.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-830.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-921.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-470.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-830.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-470.7KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-8.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-921.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-470.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-830.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-8.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-921.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-470.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-830.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-921.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-470.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-830.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-8.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.58MB/s(Youtube:不良林)
-      - 🇺🇸 美国-12.66MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.08MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-921.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-922.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.64MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.45MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.69MB/s(Youtube:不良林)
+      - 🇨🇳 中国-8.21MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-1.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.72MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.30MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.61MB/s(Youtube:不良林)
+      - 🇨🇳 台湾-470.7KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.59MB/s(Youtube:不良林)
+      - 🇩🇪 德国-830.4KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
